Implemented maximum book borowing limit and sweetalerts